# UnCompressor

./: .gitignore  Makefile  README.md  matriz_recuperada.txt  texto.txt
lib/dictionary/include/dictionary/: Decoder.hpp  Dictionary.hpp
lib/dictionary/src/: Decoder.cpp  Dictionary.cpp
lib/huffman/: CMakeLists.txt
lib/huffman/include/huffman/: HuffmanNode.hpp  HuffmanTree.hpp  MatrixHuffman.hpp
lib/huffman/src/: HuffmanNode.cpp  HuffmanTree.cpp  MatrixHuffman.cpp
lib/huffman/tests/: test_main.cpp
lib/lector/include/: lector.hpp
lib/lector/src/: lector.cpp
src/: main.cpp
